fix line location on mobile

--- a/content/mobile.css
+++ b/content/mobile.css
@@ -11,7 +11,7 @@ body {
 
 .TitleContainer {
   position: relative;
-  height: 400px;
+  height: 300px;
   margin-left: 0%;
   margin-right: 0%;
   background-color: #82c5d6;
